--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
   "builds": [
     {
-      "src": "src/index.py",
+      "src": "main.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.py"
+      "dest": "main.py"
     }
   ]
 }
